# yurss

./: README.md  config.py  lib.py  main.py  pyproject.toml  requirements.in  requirements.txt
yurss/: cli.py  config.py  config.pyi  lib.py  rss.py  util.py
