[project]
name = "yurss"
version = "0.0.1"
requires-python = ">= 3.10"
dependencies = [
    "lxml >= 5.3.0, < 6",
    "beautifulsoup4 >= 4.12.3, < 5",
]

[project.scripts]
yurss = "yurss.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yurss"]
